Added / edited Website files and edited REAME.md file

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -47,106 +47,107 @@
 				$('#navbar-item1').css('padding-bottom', '.3em');
 				$('#navbar-item1').css('transition', 'border-bottom 0.15s');
 				$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
+				$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
 				$('#navbar-item2').css('padding-bottom', '0em');
 				$('#navbar-item2').css('transition', 'border-bottom 0.15s');
 				$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
+				$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
 				$('#navbar-item3').css('padding-bottom', '0em');
 				$('#navbar-item3').css('transition', 'border-bottom 0.15s');
 				$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
+				$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
 				$('#navbar-item4').css('padding-bottom', '0em');
 				$('#navbar-item4').css('transition', 'border-bottom 0.15s');
 				$('#navbar-item4').css('transition', 'padding-bottom 0.2s');
 			} else {
 			}
 		});
-	});
-	$(document).ready(function(){
-		var scroll_start = 0;
-		var startchange = $('#about');
-		var offset = startchange.offset();
-		$(document).scroll(function() { 
-			scroll_start = $(this).scrollTop();
-			if(scroll_start > offset.top) {
-							$('#navbar-item2').css('border-bottom', '.3em solid #f16d07');
-				$('#navbar-item2').css('padding-bottom', '.3em');
-				$('#navbar-item2').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item1').css('padding-bottom', '0em');
-				$('#navbar-item1').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
-				$('#navbar-item3').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item3').css('padding-bottom', '0em');
-				$('#navbar-item3').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
-			} else {
-			}
-		});
-	});
-	$(document).ready(function(){
-		var scroll_start = 0;
-		var startchange = $('#designs');
-		var offset = startchange.offset();
-		$(document).scroll(function() { 
-			scroll_start = $(this).scrollTop();
-			if(scroll_start > offset.top) {
-								$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item1').css('padding-bottom', '0em');
-				$('#navbar-item1').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item2').css('padding-bottom', '0em');
-				$('#navbar-item2').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item3').css('border-bottom', '.3em solid #f16d07');
-				$('#navbar-item3').css('padding-bottom', '.3em');
-				$('#navbar-item3').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item4').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item4').css('padding-bottom', '0em');
-				$('#navbar-item4').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item4').css('transition', 'padding-bottom 0.2s');
-			} else {
-			}
-		});
-	});
+});
 $(document).ready(function(){
-		var scroll_start = 0;
-		var startchange = $('#contact');
-		var offset = startchange.offset();
-		$(document).scroll(function() { 
-			scroll_start = $(this).scrollTop();
-			if(scroll_start > offset.top) {
-								$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item1').css('padding-bottom', '0em');
-				$('#navbar-item1').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item2').css('padding-bottom', '0em');
-				$('#navbar-item2').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item3').css('border-bottom', '0em solid #f16d07');
-				$('#navbar-item3').css('padding-bottom', '0em');
-				$('#navbar-item3').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
-								$('#navbar-item4').css('border-bottom', '.3em solid #f16d07');
-				$('#navbar-item4').css('padding-bottom', '.3em');
-				$('#navbar-item4').css('transition', 'border-bottom 0.15s');
-				$('#navbar-item4').css('transition', 'padding-bottom 0.2s');
-			} else {
-			}
-		});
+	var scroll_start = 0;
+	var startchange = $('#about');
+	var offset = startchange.offset();
+	$(document).scroll(function() { 
+		scroll_start = $(this).scrollTop();
+		if(scroll_start > offset.top) {
+			$('#navbar-item2').css('border-bottom', '.3em solid #f16d07');
+			$('#navbar-item2').css('padding-bottom', '.3em');
+			$('#navbar-item2').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item1').css('padding-bottom', '0em');
+			$('#navbar-item1').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item3').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item3').css('padding-bottom', '0em');
+			$('#navbar-item3').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
+		} else {
+		}
 	});
-	</script>
+});
+$(document).ready(function(){
+	var scroll_start = 0;
+	var startchange = $('#quote');
+	var offset = startchange.offset();
+	$(document).scroll(function() { 
+		scroll_start = $(this).scrollTop();
+		if(scroll_start > offset.top) {
+			$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item1').css('padding-bottom', '0em');
+			$('#navbar-item1').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item2').css('padding-bottom', '0em');
+			$('#navbar-item2').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item3').css('border-bottom', '.3em solid #f16d07');
+			$('#navbar-item3').css('padding-bottom', '.3em');
+			$('#navbar-item3').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item4').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item4').css('padding-bottom', '0em');
+			$('#navbar-item4').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item4').css('transition', 'padding-bottom 0.2s');
+		} else {
+		}
+	});
+});
+$(document).ready(function(){
+	var scroll_start = 0;
+	var startchange = $('#contact');
+	var offset = startchange.offset();
+	$(document).scroll(function() { 
+		scroll_start = $(this).scrollTop();
+		if(scroll_start > offset.top) {
+			$('#navbar-item1').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item1').css('padding-bottom', '0em');
+			$('#navbar-item1').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item1').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item2').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item2').css('padding-bottom', '0em');
+			$('#navbar-item2').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item2').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item3').css('border-bottom', '0em solid #f16d07');
+			$('#navbar-item3').css('padding-bottom', '0em');
+			$('#navbar-item3').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item3').css('transition', 'padding-bottom 0.2s');
+			$('#navbar-item4').css('border-bottom', '.3em solid #f16d07');
+			$('#navbar-item4').css('padding-bottom', '.3em');
+			$('#navbar-item4').css('transition', 'border-bottom 0.15s');
+			$('#navbar-item4').css('transition', 'padding-bottom 0.2s');
+		} else {
+		}
+	});
+});
+
+</script>
 </head>
 <div class="navbar" >
 	<nav class="nav">
 		<ul class="navbar-list">
-			<li class="navbar-item"><a id="navbar-item4" href="#contact" id="smooth">Contact Us</a></li>
-			<li class="navbar-item"><a id="navbar-item3" href="#designs" id="smooth">Designs</a></li>
+			<li class="navbar-item"><a id="navbar-item4" href="#contact" id="smooth">Contact Me</a></li>
+			<li class="navbar-item"><a id="navbar-item3" href="#quote" id="smooth">Designs</a></li>
 			<li class="navbar-item"><a id="navbar-item2" href="#about" id="smooth">About</a></li>
 			<li class="navbar-item"><a id="navbar-item1" href="#top" id="smooth" class="current">Home</a></li>
 		</ul>
@@ -156,21 +157,45 @@ $(document).ready(function(){
 	<img src="images/bg.png" alt="background image" class="background">
 	<h2 class="title">ZRwebs<small class="subtitle"><br>A new twist to website design</small></h2>
 </div>
-<div id="about"></div>
+<div id="about" onscoll="function()"></div>
 <div class="divider-1">
 	<div class="title-div">
-	<h2 class="row-title">Who am I?</h2>
-	<br>
-	<hr>
-	<br>
-	<p class="para">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor <br><br>in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
-</div>
+		<h2 class="row-title">Who am I?</h2>
+		<br>
+		<hr>
+		<br>
+		<p class="para">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor <br><br>in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+	</div>
 </div>
 <img src="images/banner.png" alt="" class="divider-row">
-<div class="divider-2">
-	
+<div class="divider-2" id="quote">
+	<div class="title-div">
+		<h2 class="row-title">Designs</h2>
+		<br>
+		<hr>
+		<br>
+		<a href="quote.html" class="learnmore">Request a Design Quote</a>
+	</div>
 </div>
+<img src="images/banner.png" alt="" class="divider-row-2">
+<div class="divider-3" id="contact">
+	<div class="title-div">
+		<h2 class="row-title">Contact Me</h2>
+		<br>
+		<hr>
+		<br>
+		<p class="para-left">
+			Phone | 0420 842 849
+			<br>
+			Email | zac@zrwebs.com
+			<br>
+			
+			Facebook | zac.ryan.32
+			<br>
+			GitHub | Zac-ZRwebs
+		</p>
+	</div>
 </body>
 </html>
