Added Deleted photoshop files, updated index.html

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -194,7 +194,7 @@ $(document).ready(function(){
 			
 			Facebook | zac.ryan.32
 			<br>
-			GitHub | Zac-ZRwebs
+			GitHub | https://github.com/Zac-ZRwebs/ZRwebs.git
 		</p>
 	</div>
 </body>
