--- a/Website files/index.html
+++ b/Website files/index.html
@@ -29,7 +29,7 @@
 
 				$('html, body').animate({
 					scrollTop: $(hash).offset().top
-				}, 1200, function(){
+				}, 1600, function(){
 
 					window.location.hash = hash;
 				});
@@ -88,7 +88,7 @@ $(document).ready(function(){
 });
 $(document).ready(function(){
 	var scroll_start = 0;
-	var startchange = $('#quote');
+	var startchange = $('#design');
 	var offset = startchange.offset();
 	$(document).scroll(function() { 
 		scroll_start = $(this).scrollTop();
@@ -147,7 +147,7 @@ $(document).ready(function(){
 	<nav class="nav">
 		<ul class="navbar-list">
 			<li class="navbar-item"><a id="navbar-item4" href="#contact" id="smooth">Contact Me</a></li>
-			<li class="navbar-item"><a id="navbar-item3" href="#quote" id="smooth">Designs</a></li>
+			<li class="navbar-item"><a id="navbar-item3" href="#design" id="smooth">Designs</a></li>
 			<li class="navbar-item"><a id="navbar-item2" href="#about" id="smooth">About</a></li>
 			<li class="navbar-item"><a id="navbar-item1" href="#top" id="smooth" class="current">Home</a></li>
 		</ul>
@@ -156,8 +156,7 @@ $(document).ready(function(){
 <div class="top" id="top">
 	<img src="images/bg.png" alt="background image" class="background">
 	<h2 class="title">ZRwebs<small class="subtitle"><br>A new twist to website design</small></h2>
-</div>
-<div id="about" onscoll="function()"></div>
+</div><div id="about"></div>
 <div class="divider-1">
 	<div class="title-div">
 		<h2 class="row-title">Who am I?</h2>
@@ -165,12 +164,12 @@ $(document).ready(function(){
 		<hr>
 		<br>
 		<p class="para">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor <br><br>in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			I am a website developer that loves what I do. My Designs are unique, innovative and different, I can make any type of website, single-page, gallery, multi-page and much more! <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor <br><br>in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
 	</div>
 </div>
 <img src="images/banner.png" alt="" class="divider-row">
-<div class="divider-2" id="quote">
+<div class="divider-2" id="design">
 	<div class="title-div">
 		<h2 class="row-title">Designs</h2>
 		<br>
@@ -191,10 +190,9 @@ $(document).ready(function(){
 			<br>
 			Email | zac@zrwebs.com
 			<br>
-			
 			Facebook | zac.ryan.32
 			<br>
-			GitHub | https://github.com/Zac-ZRwebs/ZRwebs.git
+			GitHub | Zac-ZRwebs
 		</p>
 	</div>
 </body>
